--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ android {
 
 dependencies {
 
+    //FEITO: 002 Incluir a biblioteca com.squareup.okhttp3:okhttp:4.9.0 https://github.com/square/okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
+    // Incluir a biblioteca com.google.code.gson:gson:2.8.6 https://github.com/google/gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
